k8s/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: cloudnative
spec:
  to:
    kind: Service
    name: cloudnative
    weight: 100
  port:
    targetPort: 9080
  wildcardPolicy: None
